@@ -12,6 +12,9 @@ What's New in Python 2.5.1c1?
 Core and builtins
 -----------------
 
+- Bug #1566280: Explicitly invoke threading._shutdown from Py_Main,
+  to avoid relying on atexit.
+
 - Bug #1590891: random.randrange don't return correct value for big number
 
 - Bug #1456209: In some obscure cases it was possible for a class with a
